# carbon-trackl

./: .gitignore  OUTLINE.md  README.md  pyproject.toml  requirements.txt
carbontrack/: __init__.py  cli.py  data.py  maintenance.py  model.py  preprocess.py  utils.py  viz.py
